@@ -772,18 +772,6 @@ QString QDir::relativeFilePath(const QString &fileName) const
     return result;
 }
 
-#ifndef QT_NO_DEPRECATED
-/*!
-    \obsolete
-
-    Use QDir::toNativeSeparators() instead.
-*/
-QString QDir::convertSeparators(const QString &pathName)
-{
-    return toNativeSeparators(pathName);
-}
-#endif
-
 /*!
     \since 4.2
 
