@@ -3349,8 +3349,8 @@ void Configure::buildQmake()
             if (out.open(QFile::WriteOnly | QFile::Text)) {
                 QTextStream stream(&out);
                 stream << "#AutoGenerated by configure.exe" << endl
-                    << "BUILD_PATH = " << QDir::convertSeparators(buildPath) << endl
-                    << "SOURCE_PATH = " << QDir::convertSeparators(sourcePath) << endl;
+                    << "BUILD_PATH = " << QDir::toNativeSeparators(buildPath) << endl
+                    << "SOURCE_PATH = " << QDir::toNativeSeparators(sourcePath) << endl;
                 stream << "QMAKESPEC = " << dictionary["QMAKESPEC"] << endl
                        << "QT_VERSION = " << dictionary["VERSION"] << endl;
 
